<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/catagories">
       <menu>
           <item
           android:id="@+id/popularity"
           android:title="@string/sort_popularity" />
       <item
           android:id="@+id/rating"
           android:title="@string/sort_by_rating"/>
       <item
           android:id="@+id/on_the_air"
           android:title="@string/on_the_air" />
       <item
           android:id="@+id/aired_today"
           android:title="@string/aired_today" />
       </menu>
    </item>

    <item android:title="@string/others">
        <menu>
            <item
           android:id="@+id/nav_fav"
           android:icon="@mipmap/ic_menu_favorite"
           android:title="@string/favorites" />
        </menu>
    </item>
</menu>
