<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_screen3"
    tools:ignore="Overdraw">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin_details_k"
            android:background="@color/bg_screen3"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/layout_width_image_screnn1"
                android:layout_height="@dimen/layout_height_screen1"
                android:id="@+id/poster_of_the_show"
                android:contentDescription="@string/poster_image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/margin_start_k">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_screen1"
                    android:textStyle="bold"
                    android:id="@+id/show_title"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/rating"
                        android:textSize="@dimen/text_size_details"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/rating_tv"
                        android:textSize="@dimen/text_size_details"
                        android:textStyle="bold"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/first_aired_date"
                        android:textSize="@dimen/text_size_details"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/first_aired_date_tv"
                        android:textSize="@dimen/text_size_details"
                        android:textStyle="bold"/>
                </LinearLayout>
                <ImageView
                    android:id="@+id/favImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_menu_not_favorite"
                    android:layout_margin="@dimen/layout_margin_details"
                    android:contentDescription="@string/favorites" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/colorAccent"
            android:layout_marginTop="@dimen/layout_margin_top_details">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:background="@color/bg_screen3"
                android:text="@string/overview"
                android:textSize="@dimen/text_size_heading_details"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_details"
                android:id="@+id/overview_tv"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/colorAccent"
            android:layout_margin="@dimen/layout_margin_details_linear">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/videos"
                android:id="@+id/ShowInfoVideo"
                android:background="@color/bg_screen3"
                android:textSize="@dimen/text_size_heading_details"
                android:textStyle="bold"/>
            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/vidoesRecycleView"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/colorAccent"
            android:layout_margin="@dimen/layout_margin_details_linear">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reviews"
                android:id="@+id/ShowInfoReviews"
                android:background="@color/bg_screen3"
                android:textSize="@dimen/text_size_heading_details"
                android:textStyle="bold"/>

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reviewRecycleView"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>